# linux-analysis

./: .gitignore  README.md
dataset/: PHASE_E3_TODO.md  README.md  SS_CS_MISMATCH.md  UNSUCCESSFUL.md
dataset-baseline-6.14/AIO_PLUG_THRESHOLD/: 1.input.txt  2.input.txt  ss-size1.txt  ss-size2.txt
dataset-baseline-6.14/ALLOC_CACHE_MAX/: 1.input.txt  ss-size1.txt
dataset-baseline-6.14/ALLOC_CACHE_THRESHOLD/: 1.output.txt
dataset-baseline-6.14/AMT_DISCOVERY_TIMEOUT/: 1.input.txt  1.output.txt  2.output.txt
dataset-baseline-6.14/AMT_INIT_REQ_TIMEOUT/: 1.func_offset.json  ss-size1.txt
dataset-baseline-6.14/AMT_MAX_REQ_COUNT/: 1.func_offset.json  1.input.txt  1.output.txt  ss-size1.txt
dataset-baseline-6.14/AMT_MAX_REQ_TIMEOUT/: 1.func_offset.json  1.output.txt  ss-size2.txt
dataset-baseline-6.14/AMT_SECRET_TIMEOUT/: 1.output.txt  ss-size1.txt
dataset-baseline-6.14/APOLL_MAX_RETRY/: 1.func_offset.json  ss-size1.txt
dataset-baseline-6.14/BFQ_HW_QUEUE_SAMPLES/: ss-size1.txt  ss-size2.txt
dataset-baseline-6.14/BFQ_HW_QUEUE_THRESHOLD/: 1.output.txt  2.input.txt  3.input.txt  4.func_offset.json  4.input.txt  ss-size1.txt
dataset-baseline-6.14/BFQ_MIN_TT/: 2.func_offset.json  3.input.txt  4.input.txt  (+1 more)
docker/: Dockerfile
mapping/: .gitignore
passes/: CMakeLists.txt
passes/TaintTrackerPass/: TaintTrackerPass.cpp
scripts/: _lib.sh  build-with-gcc-inner.sh  build-with-gcc-outer.sh  build-with-wllvm.sh  config-6.14.0-xkernel  config-6.8.0-71-generic  ir_to_assembly.py  locate-const-in-ir.py  setup-standalone.sh  setup.sh  ss-analysis-parallel.py  ss-analysis.sh  ss-gen.sh
statistics/: disjoint_sses.txt  disjoint_sses_asm.txt  disjoint_sses_xyz.txt  ss_instr_size.txt
(+1624 files in other folders)
